--- a/reads2025.html
+++ b/reads2025.html
@@ -411,7 +411,7 @@ where you try and fail don't hesitate to reach out to people who can help you ge
     <p><strong>Blurb:</strong> Mira wants to take revenge on the person who was responsible for her mother,brother's deadth.
     She manages to get into the house of the one guilty as a tutor.
     The book is divided into 4 sections each of which reveals truth about the same story in the prespective of different people part of it. </p>
-    <p><strong>Review:</strong> Eventhough i had few unanswered questions abount the story ,i liked it for its different plot.
+    <p><strong>Review:</strong> Eventhough I had few unanswered questions about the story ,I liked it for its different plot.
     </p>
 </section> 
 
@@ -450,3 +450,4 @@ where you try and fail don't hesitate to reach out to people who can help you ge
 
 </body>
 </html>
+
