--- a/reads2026.html
+++ b/reads2026.html
@@ -45,7 +45,7 @@
     <li><a href="#"> 21. </a></li>
     <li><a href="#"> 22. </a></li>
     <li><a href="#"> 23. </a></li>
-    <li><a href="#"> 24. </a></li>
+    <li><a href="#"> 24. </a></li></ul>
     <ul>
     <li><a href="#"> 25. </a></li>
     <li><a href="#"> 26. </a></li>
@@ -252,3 +252,4 @@
 
 </body>
 </html>
+
