--- a/reads2026.html
+++ b/reads2026.html
@@ -75,10 +75,16 @@
     <h2> That's not my name </h2>
     <p><strong>Author:</strong> Megan Lally</p>
     <p><strong>Genre:</strong> Fiction,Thriller</p>
-    <p><strong>Rating:</strong> </p>
-    <p><strong>Blurb:</strong> </p>
+    <p><strong>Rating:</strong> 4.3 </p>
+    <p><strong>Blurb:</strong> A teenage girl wakes up in a ditch with no memory of who she is. 
+    When a man arrives at the police station claiming to be her father, she wants to believe him, but something feels off. 
+    While she is trying to piece together her past ,Drew is desperately searching for his girlfriend Lola who was with him before disappearing mysteriously.
+    So the whole town believes it was Drew who killed Lola.</p>
     <p><strong>Review:</strong> I was clueless and confused on what was happening initially.
-      Later as the story builds everything started making sense.</p>
+      Later as the story builds everything started making sense.
+      It is after Drew leaves his town searching for Lola himself that the story becomes  more interesting.
+      Beyond the thrill and suspense, the story becomes emotional and hear piercing.
+    </p>
   </section>
 
   <!--<section id=" " class="review">
@@ -252,4 +258,5 @@
 
 </body>
 </html>
+
 
